--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,8 @@ django = "3.2"
 djangorestframework = "^3.14.0"
 pillow = "^10.2.0"
 django-resized = "^1.0.2"
+djoser = "^2.2.2"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
