--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^10.2.0"
 django-resized = "^1.0.2"
 djoser = "^2.2.2"
 djangorestframework-simplejwt = "^5.3.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
